[package]
name = "novac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "frontend"
required-features = ["frontend"]

[dependencies]
leptos = { version = "0.2.5", optional = true }
serde = { version = "1.0.160", features = ["derive"], optional = true }
tokio = { version = "1.27.0", features = [
  "macros",
  "rt-multi-thread",
], optional = true }

[features]
default = ["dep:serde", "dep:tokio"]
frontend = ["dep:leptos"]
